[package]
name = "fuelfinder_client"
version = "0.1.0"
edition = "2021"
authors = ["Oforkaja Joseph <oforkajajoseph@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
leptos-use = "0.17"
# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Geolocation",
    "Position",
    "Coordinates",
] }
wasm-bindgen = "0.2"
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "app"
site-root = "dist"
site-pkg-dir = "pkg"
